--- a/form.html
+++ b/form.html
@@ -2,37 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Sendpulse PHP API subscribe form</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $("#sendpulseSubscribeForm").on('submit', function(e){
-                e.preventDefault();
-                var $form = $(this);
-                var handlerUrl = $form.attr('action');
-                var email = $form.find('input[name=email]').val();
-                var data = $form.serialize();
-
-                if (!email) {
-                    alert('Empty fields');
-                    return false;
-                }
-
-                $.ajax({
-                    type: 'POST',
-                    data: data,
-                    url: handlerUrl,
-                    success: function(data) {
-                        alert('Subscribe: ' + JSON.stringify(data));
-                    },
-                    error: function(data) {
-                        alert('Error: ' + JSON.stringify(data));
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="./app.js"></script>
 </head>
 <body>
     <form class="sp-form" id="sendpulseSubscribeForm" action="subscribe-form-handler.php" method="post">
@@ -40,12 +13,12 @@
             <strong>Sendpulse PHP API subscribe form</strong>
         </p>
         <div class="form-group">
-            <label>Email:</label>
-            <input type="email" name="email" class="form-control" value="" placeholder="email@example.com" required />
+            <label>Email</label>
+            <input type="email" name="email" value="" placeholder="email@example.com" required />
         </div>
         <div class="form-group">
-            <label>Name:</label>
-            <input type="text" name="name" class="form-control" value="" placeholder="Your name" />
+            <label>Name <small>(optional)</small></label>
+            <input type="text" name="name" value="" placeholder="Your name" />
         </div>
         <div class="form-group">
             <button type="submit">Subscribe</button>
